--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             background-color: #00244e;
         }
         #work {
-            background-color: #ced4da;
+            background-color: #0a9254;
         }
         #contact {
             background-color: #adb5bd;
@@ -227,7 +227,7 @@
     </section>
 
     <!-- Work Experiences Section -->
-    <section id="work" class="section d-flex align-items-center">
+    <section id="work" class="section d-flex align-items-center text-white bg-gradient">
         <div class="container text-center">
             <h1>Work Experiences</h1>
             <p class="lead">Describe your work experiences here.</p>
