--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             background-size: cover;
             background-position: center;
         }
+        .section-contact {
+            padding: 50px 20px;
+            min-height: 20vh;
+            background-size: cover;
+            background-position: center;
+        }
         .section-intro {
             padding: 50px 20px;
             min-height: 100vh;
