--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </section>
 
     <!-- Contact Me Section -->
-    <section id="contact" class="section d-flex">
+    <section id="contact" class="section-contact d-flex">
         <div class="container-md text-center">
             <span><h1>Please feel free to reach out to me at any of the options below:</h1></span>
             <div class=row>
