--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <p class="text-bold">Phone: <a href="tel:+17177984032">(717)798-4032</a></p>
                 </div>
                 <div class="container col-md-4">
-                    <p class="text-bold">LinkedIn: <a href="https://linkedin.com" target="_blank">My LinkedIn Profile</a></p>
+                    <p class="text-bold">LinkedIn: <a href="https://www.linkedin.com/in/thomas-bartlett0612" target="_blank">My LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
