--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class = "container-md">
             <div class = "row">
                 <div class = "col-md-3">
-                    <img class="rounded-circle img-fluid img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg">
+                    <img class="rounded-circle img-fluid img-thumbnail" alt="headshot" src="/images/AboutMe2.jpg">
                 </div>
                 <div class = "col-md-9">
                     <h1 class="display-4 fw-bold">About Me</h1>
@@ -143,45 +143,17 @@
 
     <!-- Projects Section -->
     <section id="projects" class="section d-flex align-items-center">
-        <div class="container text-center">
+        <div class="container-md text-center">
             <h1>Projects</h1>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <div class="row">
+                <div class="col-md-2>
+                    <img class="rounded img-fluid img-thumbnail" alt="Mobile App" src="/images/Mobile_App_1.png">
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://images.ctfassets.net/ihx0a8chifpc/GTlzd4xkx4LmWsG1Kw1BB/ad1834111245e6ee1da4372f1eb5876c/placeholder.com-1280x720.png?w=1920&q=60&fm=webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://images.ctfassets.net/ihx0a8chifpc/GTlzd4xkx4LmWsG1Kw1BB/ad1834111245e6ee1da4372f1eb5876c/placeholder.com-1280x720.png?w=1920&q=60&fm=webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://images.ctfassets.net/ihx0a8chifpc/GTlzd4xkx4LmWsG1Kw1BB/ad1834111245e6ee1da4372f1eb5876c/placeholder.com-1280x720.png?w=1920&q=60&fm=webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
+                <div class="col-md-10">
+                    <p>This project was done during my schooling for a class on mobile app development. I had chosen to develop an app that allowed the user to keep track of upcoming events.
+                    The app has a login/registration screen that utilizes an SQLite DB to store user name and password information. It also took advantage of this DB to link tables of the users to their specific events upon login.
+                    This app was built using Android Studio. <a href="https://github.com/tbartlett0612/CS_360.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </div>
     </section>
