--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
     <!-- Projects Section -->
     <section id="projects" class="section d-flex align-items-center">
-        <div class="container-md text-center">
-            <h1>Projects</h1>
+        <div class="container-md text-white">
+            <h1 class="text-center">Projects</h1>
             <div class="row">
-                <div class="col-md-2>
+                <div class="col-md-2">
                     <img class="rounded img-fluid img-thumbnail" alt="Mobile App" src="/images/Mobile_App_1.png">
                 </div>
                 <div class="col-md-10">
