--- a/index.html
+++ b/index.html
@@ -128,13 +128,32 @@
             <h3>A look into some skills I picked up along the way:</h3>
             <div class = "row">
                 <div class = "col-md-4">
-                    <h3 class="text-center">Skills list 1</h3>
+                    <h3 class="text-center"><u>Programming Languages</u></h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">Python</li>
+                        <li class="list-group-item">Java</li>
+                        <li class="list-group-item">C++</li>
+                        <li class="list-group-item">HTML</li>
+                        <li class="list-group-item">CSS</li>
+                        <li class="list-group-item">JavaScript</li>
+                    </ul>
                 </div>
                 <div class = "col-md-4">
-                    <h3 class="text-center">Skills list 2</h3>
+                    <h3 class="text-center"><u>Programming Frameworks </u></h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">Bootstrap</li>
+                        <li class="list-group-item">Angular</li>
+                        <li class="list-group-item">Node</li>
+                        <li class="list-group-item">Spring</li>
+                    </ul>
                 </div>
                 <div class = "col-md-4">
-                    <h3 class="text-center">Skills list 3</h3>
+                    <h3 class="text-center"><u>Programming Tools</u></h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">Git and GitHub</li>
+                        <li class="list-group-item">Postman</li>
+                        <li class="list-group-item">Multiple IDE's</li>
+                    </ul>
                 </div>
             </div>
         </div>
