--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h3>A look into some skills I picked up along the way:</h3>
             <div class = "row">
                 <div class = "col-md-4">
-                    <h3 class="text-center"><u>Programming Languages</u></h3>
+                    <h3"><u>Programming Languages</u></h3>
                     <ul>
                         <li class="list-group-item">Python</li>
                         <li class="list-group-item">Java</li>
@@ -139,7 +139,7 @@
                     </ul>
                 </div>
                 <div class = "col-md-4">
-                    <h3 class="text-center"><u>Programming Frameworks </u></h3>
+                    <h3"><u>Programming Frameworks </u></h3>
                     <ul>
                         <li class="list-group-item">Bootstrap</li>
                         <li class="list-group-item">Angular</li>
@@ -148,7 +148,7 @@
                     </ul>
                 </div>
                 <div class = "col-md-4">
-                    <h3 class="text-center"><u>Programming Tools</u></h3>
+                    <h3"><u>Programming Tools</u></h3>
                     <ul>
                         <li class="list-group-item">Git and GitHub</li>
                         <li class="list-group-item">Postman</li>
@@ -174,6 +174,15 @@
                     This app was built using Android Studio. <a href="https://github.com/tbartlett0612/CS_360.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class= "embed-responsive-item" src="https://youtu.be/whYpPis9P3E" allowfullscreen></iframe>
+                </div>
+                <div class="col-md-8">
+                    <p>Project Description</p>
+                </div>
+            </div>
+            
         </div>
     </section>
 
