--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class= "embed-responsive-item" src="https://youtu.be/whYpPis9P3E" allowfullscreen></iframe>
+                <div class="container ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/whYpPis9P3E?rel=0"allowfullscreen></iframe>
                 </div>
                 <div class="col-md-8">
                     <p>Project Description</p>
