--- a/index.html
+++ b/index.html
@@ -175,11 +175,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="container ratio ratio-16x9">
+                <div class="container col-md-4 ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/whYpPis9P3E?rel=0"allowfullscreen></iframe>
                 </div>
                 <div class="col-md-8">
-                    <p>Project Description</p>
+                    <p>This project was done during my Computer Graphics and Visualization course which focused on using OpenGL to recreate a 2D picture into a 3D model.
+                    <a href="https://github.com/tbartlett0612/CS_330.git" target="_blank">Here</a> is my Github repository for this project.</p></p>
                 </div>
             </div>
             
