--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="container col-md-4 ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/whYpPis9P3E?rel=0"allowfullscreen></iframe>
+                <div class="col-md-4">
+                    <div class="container ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/whYpPis9P3E?rel=0"allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <p>This project was done during my Computer Graphics and Visualization course which focused on using OpenGL to recreate a 2D picture into a 3D model.
