--- a/index.html
+++ b/index.html
@@ -182,10 +182,21 @@
                 </div>
                 <div class="col-md-8">
                     <p>This project was done during my Computer Graphics and Visualization course which focused on using OpenGL to recreate a 2D picture into a 3D model.
-                    <a href="https://github.com/tbartlett0612/CS_330.git" target="_blank">Here</a> is my Github repository for this project.</p></p>
+                    <a href="https://github.com/tbartlett0612/CS_330.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
             </div>
-            
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="container ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/NmeVywfCwvg?rel=0"allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p>This project was done during my Embedded Systems class. The purpose of this project was to create a prototype of a smart thermostat using the TI board. 
+                    For the prototype, it used the TMP006 temperature sensor to read the room temperature (via I2C), an LED to indicate the output to the thermostat where LED on = heat on (via GPIO), two buttons to increase and decrease the set temperature (via GPIO interrupt), and the UART to simulate the data being sent to the server.
+                    <a href="https://github.com/tbartlett0612/CS_350.git" target="_blank">Here</a> is my Github repository for this project.</p>
+                </div>
+            </div>
         </div>
     </section>
 
