--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section id="projects" class="section d-flex align-items-center">
         <div class="container-md text-white">
             <h1 class="text-center">Projects</h1>
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-md-4">
                     <img class="rounded img-fluid img-thumbnail" alt="Mobile App" src="/images/Mobile_App_1.png">
                 </div>
@@ -174,7 +174,7 @@
                     This app was built using Android Studio. <a href="https://github.com/tbartlett0612/CS_360.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="container ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/whYpPis9P3E?rel=0"allowfullscreen></iframe>
@@ -185,7 +185,7 @@
                     <a href="https://github.com/tbartlett0612/CS_330.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="container ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/NmeVywfCwvg?rel=0"allowfullscreen></iframe>
