--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@
                     <a href="https://github.com/tbartlett0612/CS_350.git" target="_blank">Here</a> is my Github repository for this project.</p>
                 </div>
             </div>
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <img class="rounded img-fluid img-thumbnail" alt="Coding" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvYTdfJUPCcPu4HAbNVtF6vFpYda9p2gFCugbtxspdZ1oFp4lI-mbHrqD5QA51dsBS2-A&usqp=CAU">
+                </div>
+                <div class="col-md-8">
+                    <p>I have other projects from school as well as this website on my GitHub account. <a href="https://github.com/tbartlett0612?tab=repositories" target="_blank">Here</a> are my repositories for my projects.</p>
+                </div>
+            </div>
         </div>
     </section>
 
