--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
         .navbar a:hover {
             background-color: #555;
         }
-        .accordion {
-            accordion-bg: black;
-            accordion-color: white;
-        }
         #intro {
             background-image: url("/images/intro.jpg");
             background-repeat: no repeat;
@@ -263,7 +259,7 @@
         <div class="container-md text-center">
             <h1>Work Experiences</h1>
             
-            <div class="accordion" id="workExperience">
+            <div class="accordion accordion-bg-black accordion-color-white" id="workExperience">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
