--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
         <div class="container-md text-center">
             <h1>Work Experiences</h1>
             
-            <div class="accordion bg-black text-white" id="workExperience">
-                <div class="accordion-item">
+            <div class="accordion" id="workExperience">
+                <div class="accordion-item  bg-black text-white">
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Accordion Item #1
