--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
             <h1>Work Experiences</h1>
             
             <div class="accordion" id="workExperience">
-                <div class="accordion-item  bg-black text-white">
+                <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button bg-black text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Accordion Item #1
                         </button>
                     </h2>
