--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="accordion" id="workExperience">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button bg-black text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button bg-#00244e text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Accordion Item #1
                         </button>
                     </h2>
