--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             background-color: #00244e;
         }
         #work {
-            background-color: #0a9254;
+            background-color: warning;
         }
         #contact {
             background-color: #adb5bd;
