--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
         .snhu {
             background-color: #00244e;
         }
-        #work {
-            background-color: warning;
-        }
         #contact {
             background-color: #adb5bd;
         }
@@ -259,7 +256,7 @@
     </section>
 
     <!-- Work Experiences Section -->
-    <section id="work" class="section d-flex align-items-center text-white bg-gradient">
+    <section id="work" class="section d-flex align-items-center text-white bg-warning bg-gradient">
         <div class="container-md text-center">
             <h1>Work Experiences</h1>
             
