--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         #contact {
             background-color: #adb5bd;
         }
+        #work {
+            background-color: #4f5957;
+        }
         .accordion-background{
             background-color: #00244e;
             color: white;
@@ -256,7 +259,7 @@
     </section>
 
     <!-- Work Experiences Section -->
-    <section id="work" class="section d-flex align-items-center text-white bg-warning bg-gradient">
+    <section id="work" class="section d-flex align-items-center text-white bg-gradient">
         <div class="container-md text-center">
             <h1>Work Experiences</h1>
             
