--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             background-color: #00244e;
         }
         #contact {
-            background-color: #adb5bd;
+            background-color: #4f5957;
         }
         #work {
             background-color: #4f5957;
