--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
 <body>
     <!-- Floating Navigation -->
     <nav class="navbar flex-column" id="navigation">
-        <a href="#about" class="nav-link">A</a>
-        <a href="#projects" class="nav-link">P</a>
-        <a href="#education" class="nav-link">E</a>
-        <a href="#work" class="nav-link">W</a>
-        <a href="#contact" class="nav-link">C</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#education" class="nav-link">Education</a>
+        <a href="#work" class="nav-link">Work</a>
     </nav>
 
     <!-- Intro Section -->
