--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     </div>
 
     <!-- Use any element to open the sidenav -->
-    <span onclick="openNav()">open</span>
+    <button class="btn" onclick="openNav()"><i class="bi bi-menu-button"></i></button>
+    
 
     <!-- Intro Section -->
     <section id="intro" class="section-intro d-flex align-items-center text-white">
