--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
     </div>
 
     <!-- Use any element to open the sidenav -->
-    <button class="btn sticky-top" onclick="openNav()"><span class="navbar-toggler-icon"></span></button>
+    <div>
+        <button class="btn btn-primary sticky-top" onclick="openNav()"><span class="navbar-toggler-icon"></span></button>
+    </div>
+    
     
 
     <!-- Intro Section -->
