--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             background-size: cover;
             background-position: center;
         }
+        .menu{
+            background-color: transparent;
+        }
         /* The side navigation menu */
         .sidenav {
           height: 100%; /* 100% Full-height */
@@ -130,8 +133,8 @@
     </div>
 
     <!-- Use any element to open the sidenav -->
-    <div>
-        <button class="btn btn-primary sticky-top" onclick="openNav()"><span class="navbar-toggler-icon"></span></button>
+    <div class="sticky-top menu">
+        <button class="btn btn-primary" onclick="openNav()"><i class="bi bi-list"></i></button>
     </div>
     
     
