--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         <a href="#">Clients</a>
         <a href="#">Contact</a>
     </div>
-     
+    <!-- Use any element to open the sidenav -->
+    <div class="sticky-top menu">
+        <button class="btn btn-primary" onclick="openNav()">Menu</button>
+    </div> 
 
     <!-- Intro Section -->
     <section id="intro" class="section-intro d-flex align-items-center text-white">
-        <!-- Use any element to open the sidenav -->
-        <div class="sticky-top menu">
-            <button class="btn btn-primary" onclick="openNav()"><i class="bi bi-list"></i></button>
-        </div>
+        
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
             <span id="text"></span><span class="cursor">|</span>
