--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
         .navbar {
             position: fixed;
-            right: 0;
+            left: 0;
             z-index: 1000;
         }
         .navbar a {
