--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
 <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#education">Education</a>
+        <a href="#work">Work History</a>
+        <a href="#contact">Contact Me</a>
     </div>
     <!-- Use any element to open the sidenav -->
     <nav class="navbar">
