--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         .navbar a:hover {
             background-color: #555;
         }
+        .menu{
+            background-color: #333;
+            color: white;
+        }
 
         /* The side navigation menu */
         .sidenav {
@@ -150,7 +154,7 @@
     </div>
     <!-- Use any element to open the sidenav -->
     <nav class="navbar">
-        <button class="btn btn-primary" onclick="openNav()">Menu</button>
+        <button class="btn menu" onclick="openNav()">Menu</button>
     </nav>
      
 
