--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
             text-align: center;
             border-radius: 50%;
         }
-        .navbar a:hover {
-            background-color: #555;
-        }
+    
         .menu{
             background-color: #333;
             color: white;
+        }
+        .menu a:hover {
+            background-color: #555;
         }
 
         /* The side navigation menu */
