--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             border-radius: 50%;
         }
     
-        .menu{
+        .menu a{
             background-color: #333;
             color: white;
         }
