--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
             border-radius: 50%;
         }
     
-        .menu a{
+        .menu{
             background-color: #333;
             color: white;
         }
         .menu a:hover {
             background-color: #555;
+            color: white;
         }
 
         /* The side navigation menu */
