--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,12 +26,12 @@
             background-size: cover;
             background-position: center;
         }
-        .navbar {
+        .menu {
             position: fixed;
             left: 0;
             z-index: 1000;
         }
-        .navbar a {
+        .menu a {
             display: block;
             margin-bottom: 10px;
             padding: 10px;
@@ -40,11 +40,6 @@
             text-decoration: none;
             text-align: center;
             border-radius: 50%;
-        }
-    
-        .menu{
-            background-color: #333;
-            color: white;
         }
         .menu a:hover {
             background-color: #555;
