--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ u<!DOCTYPE html>
             left: 0;
             z-index: 1000;
         }
-        .menu a {
+        .menu {
             display: block;
             margin-bottom: 10px;
             padding: 10px;
@@ -41,7 +41,7 @@ u<!DOCTYPE html>
             text-align: center;
             border-radius: 50%;
         }
-        .menu a:hover {
+        .menu:hover {
             background-color: #555;
             color: white;
         }
