--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ u<!DOCTYPE html>
         <a href="#contact">Contact Me</a>
     </div>
     <!-- Use any element to open the sidenav -->
-    <nav class="navbar">
+    <nav class="navbar flex-column">
         <button class="btn btn-primary" onclick="openNav()">Menu</button>
     </nav>
      
