--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -142,7 +142,18 @@ u<!DOCTYPE html>
 </head>
 <body>
     
-     
+     <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#education">Education</a>
+        <a href="#work">Work History</a>
+        <a href="#contact">Contact Me</a>
+    </div>
+    <!-- Use any element to open the sidenav -->
+    <nav class="navbar flex-column">
+        <button class="btn btn-primary" onclick="openNav()">Menu</button>
+    </nav>
 
     <!-- Intro Section -->
     <section id="intro" class="section-intro d-flex align-items-center text-white">
