--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             background-color: black;
         }
         #projects {
-            background-image: url("/images/project.jpg");
+            background-image: url("/images/project2.jpg");
             background-image: bg-opacity-50;
             background-repeat: no repeat;
             background-size: cover;
@@ -116,7 +116,10 @@
             background-color: #4f5957;
         }
         #work {
-            background-color: #4f5957;
+            background-image: url("/images/project.jpg");
+            background-image: bg-opacity-50;
+            background-repeat: no repeat;
+            background-size: cover;
         }
         .accordion-background{
             background-color: #00244e;
