--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
         }
         #work {
             background-image: url("/images/project.jpg");
-            background-image: bg-opacity-50;
             background-repeat: no repeat;
             background-size: cover;
         }
@@ -312,7 +311,7 @@
     </section>
 
     <!-- Work Experiences Section -->
-    <section id="work" class="section d-flex align-items-center text-white bg-gradient">
+    <section id="work" class="section d-flex align-items-center text-white">
         <div class="container-md text-center">
             <h1>Work Experiences</h1>
             
