--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <strong>Lead Specialty Coordinator/Specialty Coordinator</strong><br>Benecard Central Fill
+                            <p><strong>Lead Specialty Coordinator/Specialty Coordinator</strong></p>
+                            <p>Benecard Central Fill</p>
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#workExperience">
@@ -332,7 +333,8 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <strong>Scheduling Specialist</strong><br>Holy Spirit Health Systems
+                            <p><strong>Scheduling Specialist</strong></p>
+                            <p>Holy Spirit Health Systems</p>
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -345,7 +347,8 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <strong>Operations Supervisor</strong><br>UPS
+                            <p><strong>Operations Supervisor</strong></p>
+                            <p>UPS</p>
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -357,11 +360,12 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <strong>Inside Sales Representative</strong><br>West Shore Home
+                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            <p><strong>Inside Sales Representative</strong></p>
+                            <p>West Shore Home</p>
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
+                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#workExperience">
                         <div class="accordion-body">
                             <p>Contacted potential clients to coordinate appointments with the company sales representatives. Responded to incoming requests from potential clients with the objective of setting up appointments with a sales representative.</p> 
                         </div>
@@ -370,11 +374,12 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <strong>Taxpayer Information Services Call Center Supervisor</strong><br>Pennsylvania Department of Revenue
+                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                            <p><strong>Taxpayer Information Services Call Center Supervisor</strong></p>
+                            <p>Pennsylvania Department of Revenue</p>
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
+                    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#workExperience">
                         <div class="accordion-body">
                             <p>Supervised a group of 10-15 Customer Service Representatives who responded to incoming calls regarding multiple tax categories. Did weekly, monthly and yearly evaluations on the Representatives assigned to my team.</p> 
                         </div>
@@ -383,11 +388,12 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <strong>Associate Application Developer</strong><br>Highmark Health
+                        <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                            <p><strong>Associate Application Developer</strong></p>
+                            <p>Highmark Health</p>
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#workExperience">
+                    <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#workExperience">
                         <div class="accordion-body">
                             <p>I worked as part of a team that was developing the new Customer Service Desktop application. I assisted in setting up developers with the proper credentials to work in the Development and Testing Environments. Help to oversee deployment of new code into Testing and Production environments. Assisted in the development of code for defect fixing and enhancements.</p> 
                         </div>
