--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <p><strong>Lead Specialty Coordinator/Specialty Coordinator</strong></p>
+                            <p><strong>Lead Specialty Coordinator/Specialty Coordinator</strong></p><br>
                             <p>Benecard Central Fill</p>
                         </button>
                     </h2>
@@ -333,7 +333,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <p><strong>Scheduling Specialist</strong></p>
+                            <p><strong>Scheduling Specialist</strong></p><br>
                             <p>Holy Spirit Health Systems</p>
                         </button>
                     </h2>
@@ -347,7 +347,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <p><strong>Operations Supervisor</strong></p>
+                            <p><strong>Operations Supervisor</strong></p><br>
                             <p>UPS</p>
                         </button>
                     </h2>
@@ -361,7 +361,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            <p><strong>Inside Sales Representative</strong></p>
+                            <p><strong>Inside Sales Representative</strong></p><br>
                             <p>West Shore Home</p>
                         </button>
                     </h2>
@@ -376,7 +376,7 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                             <p><strong>Taxpayer Information Services Call Center Supervisor</strong></p>
-                            <p>Pennsylvania Department of Revenue</p>
+                            <p>Pennsylvania Department of Revenue</p><br>
                         </button>
                     </h2>
                     <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#workExperience">
@@ -389,7 +389,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed accordion-background" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                            <p><strong>Associate Application Developer</strong></p>
+                            <p><strong>Associate Application Developer</strong></p><br>
                             <p>Highmark Health</p>
                         </button>
                     </h2>
